<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FoodBasket</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_login">Sign in or Register</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Household ID</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_email">Email Address</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_email">This email is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_incorrect_account">This account does not exist</string>
    <string name="error_field_required">This field is required</string>

    <string name="title_activity_register">Register a Family Account</string>
    <string name="title_activity_add_item">AddItemActivity</string>
    <string name="title_activity_edit_item">EditItemActivity</string>
    <string name="title_activity_create_entry">CreateEntryActivity</string>
    <string name="title_activity_detailed_entry">DetailedEntryActivity</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_edit_entry">EditEntryActivity</string>
    <string name="title_activity_inventory_list">Household Inventory</string>
    <string name="title_activity_tab_host">TabHostActivity</string>
    <string name="title_activity_recipe_list">RecipeListActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_scanner">Scan Your Item</string>

    <string name="inventory_option_1_string">Add Item</string>
    <string name="inventory_option_2_string">Order by Expiry Date</string>
    <string name="inventory_option_3_string">Order by Alphabet</string>

    <string name="scanner_option_1_string">Add Item Manually</string>

</resources>
