<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="teamrenaissance.foodbasket.admin.LoginRegisterActivity">

    <!-- Login progress -->
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:id="@+id/login_form_layout" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:id="@+id/loginLogo"
                android:layout_centerHorizontal="true"
                android:src="@drawable/login_logo"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp" />

            <EditText android:id="@+id/username" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_username"
                android:inputType="text" android:maxLines="1"
                android:singleLine="true" />

            <EditText android:id="@+id/password" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_password"
                android:imeActionId="@integer/customImeActionId"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified" android:inputType="textPassword"
                android:maxLines="1" android:singleLine="true" />

            <Button android:id="@+id/sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_top_margin" android:text="@string/action_sign_in"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="To register for a new Household ID, additionally enter your email address below:"
                android:id="@+id/textView2" />
            <!--android:textSize="18dp"-->

            <EditText android:id="@+id/email" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_email"
                android:inputType="textEmailAddress" android:maxLines="1"
                android:layout_marginTop="@dimen/button_top_margin" android:singleLine="true" />

            <Button android:id="@+id/register_button" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/action_register"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text=" "
                android:id="@+id/error"
                android:textColor="#ff0000" />
            <!--android:textSize="18dp"-->

        </LinearLayout>
    </ScrollView>

</LinearLayout>

